deployment_files/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        service: redis
    name: redis
    namespace: cubejs

spec:
    replicas: 1
    selector:
        matchLabels:
            service: redis
    strategy: {}
    template:
        metadata:
            labels:
                service: redis
        spec:
            containers:
                - env:
                      - name: ALLOW_EMPTY_PASSWORD
                        value: "yes"
                  image: bitnami/redis:latest
                  name: redis
                  ports:
                      - containerPort: 6379
                  resources: {}
            restartPolicy: Always
status: {}
