deployment_files/cube-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        service: cube-api
    name: cube-api
    namespace: cubejs
spec:
    ports:
        - name: "3000"
          port: 3000
          targetPort: 3000
        - name: "4000"
          port: 4000
          targetPort: 4000
        - name: "5432"
          port: 5432
          targetPort: 5432
    selector:
        service: cube-api
status:
    loadBalancer: {}
