deployment_files/cubestore-router-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        service: cubestore-router
    name: cubestore-router
    namespace: cubejs
spec:
    ports:
        - name: "9999"
          port: 9999
          targetPort: 9999
        - name: "3306"
          port: 3306
          targetPort: 3306
        - name: "3030"
          port: 3030
          targetPort: 3030
    selector:
        service: cubestore-router
status:
    loadBalancer: {}
