deployment_files/cubestore-workers-service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        service: cubestore-workers
    name: cubestore-workers
    namespace: cubejs
spec:
    type: ClusterIP
    clusterIP: None # Headless Service
    ports:
        - name: "10000"
          port: 10000
          targetPort: 10000
    selector:
        service: cubestore-workers
